--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hi Tabita <3
+<h1>Tabita's and Ian's Wedding! :D</h1>>
+
+<a href="https://docs.google.com/spreadsheets/d/1DdBYn4LhyNZzFcwHHgrmoGDgaGMdPZBlM-ZTmEcDwls/edit?usp=sharing">Gift Registry Link</a>
