--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<h1>Tabita's and Ian's Wedding! :D</h1>>
+<HTML>
 
-<a href="https://docs.google.com/spreadsheets/d/1DdBYn4LhyNZzFcwHHgrmoGDgaGMdPZBlM-ZTmEcDwls/edit?usp=sharing">Gift Registry Link</a>
+<HEAD>
+    <title>T&I Wedding</title>
+</HEAD>
+
+<BODY>
+    <h1>Tabita's and Ian's Wedding! :D</h1>>
+
+    <a href="https://docs.google.com/spreadsheets/d/1DdBYn4LhyNZzFcwHHgrmoGDgaGMdPZBlM-ZTmEcDwls/edit?usp=sharing">Gift
+        Registry Link</a>
+</BODY>
+
+</HTML>
