--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <HEAD>
     <title>T&I Wedding</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 </HEAD>
 
 <BODY>
