--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <HEAD>
     <title>T&I Wedding</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <style>
+
+        .banner {
+            text-align: center;
+            font-family: 'Marck Script', cursive;
+        }
+    </style>
 </HEAD>
 
 <BODY>
-    <h1>Tabita's and Ian's Wedding! :D</h1>>
+    <h1 class="banner">Tabita's and Ian's Wedding! </h1>>
 
     <a href="https://docs.google.com/spreadsheets/d/1DdBYn4LhyNZzFcwHHgrmoGDgaGMdPZBlM-ZTmEcDwls/edit?usp=sharing">Gift
         Registry Link</a>
+
+    <p>We are exciting to share this special day with you!</p>
 </BODY>
 
 </HTML>
